--- a/yun.html
+++ b/yun.html
@@ -6,7 +6,7 @@
 		
 	</style>
 	<link rel="stylesheet" type="text/css" href="css/css1.css">
-	<script src="http://libs.baidu.com/jquery/1.9.1/jquery.js"></script>
+	<script src="js/jquery-1.8.3.min.js"></script>
 	<script type="text/javascript" src="js/js.js"></script>	
 </head>
 <body>
