--- a/yun.html
+++ b/yun.html
@@ -15,7 +15,7 @@
 	   <div class="header-top">
 		<div class="header">
 		   <div class="logo">
-		   	<img src="image/logo.png">
+		   	<img src="image/logo1.png">
 		   </div>
 			<ul class="nav">
 				<li class="li-0"><a href="#">产品中心</a></li>
@@ -360,8 +360,8 @@
 				<li>
 					<ul class="second-ul">
 						<li class="max-li">上海 · 总部</li>
-						<li>电话：400-8760-865 </li>
-						<li>地址：上海市闵行区都市路4855号2号楼508 </li>
+						<li>电话：300-1234-865 </li>
+						<li>地址：韩山师范学院东丽A </li>
 						<li>邮编：100000</li>
 					</ul>
 				</li>
@@ -369,48 +369,48 @@
 				<li>
 					<ul class="second-ul">
 						<li class="max-li">广东 · 中山</li>
-						<li>总机：400-8760-865 </li>
-						<li>地址：广东省中山市东区长江路6号弘业大厦6楼610、611、612 </li>
-						<li>邮编：528400</li>
+						<li>总机：300-1234-865 </li>
+						<li>地址：韩山师范学院东丽A 哈HA </li>
+						<li>邮编：100000</li>
 					</ul>
 				</li>
 
 				<li>
 					<ul class="second-ul">
 						<li class="max-li">湖南 · 长沙</li>
-						<li>总机：400-8760-865 </li>
-						<li>地址：湖南省长沙市韶山北路418号东塘电信营业厅 </li>
-						<li>邮编：528400</li>
+						<li>总机：300-1234-865 </li>
+						<li>地址：韩山师范学院东丽A </li>
+						<li>邮编：100000</li>
 					</ul>
 				</li>
 
 				<li>
 					<ul class="second-ul">
 						<li class="max-li">东北 · 辽宁</li>
-						<li>总机：400-8760-865 </li>
-						<li>地址：湖南省长沙市韶山北路418号东塘电信营业厅 </li>
-						<li>邮编：528400</li>
+						<li>总机：300-1234-865 </li>
+						<li>地址：中山职业技术学院 </li>
+						<li>邮编：100000</li>
 					</ul>
 				</li>
 				<div class="clear"></div>
 			</ul>
 			<div class="footer-nav">
 				<ul class="nav-ul">
-					<li><a class="nav-ul-first">焦云·云通讯平台</a></li>
+					<li><a class="nav-ul-first">某云·云通讯平台</a></li>
 					<li><a href="#">文档中心</a></li>
 					<li><a>接入指南</a></li>
 					<li><a>sdk下载</a></li>
 					<li><a href="#">常见问题</a></li>
 					<li><a href="#">免责声明</a></li>
 					<li><a href="#">用户协议</a></li>
-					<li ><a class="nav-advice">投诉建议：zhouxb@yidont.com</a></li>
+					<li ><a class="nav-advice">投诉建议：xbscnd@yidont.com</a></li>
 					<div class="clear"></div>
 				</ul>
 			</div>
 			<div class="footer-footer">
 			    <div class="footer-word">
-				<p> Copyright © 2013-2017 yidont.com 中山亿动网络科技有限公司 版权所有</p>
-				<p>地址：广东省中山市东区长江路6号弘业大厦6楼610-612室 | 备案/许可证编号：粤ICP备14053156号-1</p>
+				<p> Copyright © 2013-2017 xxxx.com xxxxx网络科技有限公司 版权所有</p>
+				<p>地址：广东省xxxxxxxxxxxxxx | 备案/许可证编号：粤ICP备14053156号-1</p>
 				</div>
 				<div class="footer-img">
 				<img src="image/safe.png">
