--- a/yun.html
+++ b/yun.html
@@ -403,7 +403,7 @@
 					<li><a href="#">常见问题</a></li>
 					<li><a href="#">免责声明</a></li>
 					<li><a href="#">用户协议</a></li>
-					<li ><a class="nav-advice">投诉建议：xbscnd@yidont.com</a></li>
+					<li ><a class="nav-advice">投诉建议：xbscnd@xxxxxx.com</a></li>
 					<div class="clear"></div>
 				</ul>
 			</div>
